# guidance_planner_muli_robot_nodes

./: .gitignore  CENTRALIZED_LOGGING.md  CMakeLists.txt  README.md  central_aggregator_profiler.json  package.xml  profiler.json
config/: multi_robot_settings.yaml  multi_robot_settings_tu_delt_laptop.yaml  network.yaml  rosconsole.conf
docs/: multi_robot_id_assignment_and_configuration.md  ros_networking_setup_documentation.md  vicon_bridge_documentation.md  vicon_system_documentation.md
include/guidance_planner_multi_robot_nodes/: central_aggregator_node.h  non_com_cv_robot.h
include/multi_robot_nodes/: central_aggregator_node.h
launch/: jules_test_real_jackal_arg.launch  jules_test_real_jackal_arg_3_only_robots.launch  jules_test_real_jackal_arg_3_robots_and_dyn_obs.launch  jules_test_real_jackal_arg_dyn_obs_robots.launch  jules_test_real_jackal_arg_only_robots.launch  jules_test_real_jackal_arg_only_robots_1_4.launch  jules_test_real_jackal_only_non_com_arg.launch  launch_central_agg_middleware.launch  no_vicon_jules_test_real_jackal_arg.launch  non_com_cv_robot.launch  test.launch  test_zeroMQ_pub_sub.launch  test_zeroMQ_pub_sub_argument.launch
scripts/: middleware_logger.py  middleware_publisher.py  middleware_publisher_node.py  middleware_ros_to_zermoMQ_central_agg_pub.py  middleware_ros_to_zeroMQ.py  middleware_ros_to_zeroMQ_class.py  middleware_ros_to_zeroMQ_publisher.py  middleware_subscriber.py  middleware_subscriber_node.py  middleware_zermoMQ_to_ros_central_agg_sub.py  test_middleware_logging.py  util_middleware.py
src/: central_aggregator_node.cpp  non_com_cv_robot.cpp  test_code_function.cpp
srv/: trajectory_sharing.srv
